Primeira section da Homepage + verificação de idade

--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cana 90</title>
+    <link rel="stylesheet" href="./css/home.css">
 </head>
 <body>
-    
+    <nav>
+        <img src="" alt="Logo Cana 90">
+        <ul>
+            <li><a href="#">Produtos</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Contato</a></li>
+        </ul>
+    </nav>
+
+    <div class="bgModal hidden">
+        <div id="modal" class="callAnimation">
+            <h1>Aviso!</h1>
+            <p>Este site possui conteúdo inapropriado para menores de idade.</p>
+            <button class="yes"><span>Tenho mais de 18 anos</span></button>
+            <button class="no"><span>Sou menor</span></button>
+        </div>
+    </div>
+
+    <section class="landingPage">
+        <h1>Bem vindo!</h1>
+    </section>
+
+    <script src="js/home.js"></script>
 </body>
 </html>
