--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="boutContainer">
                 <div class="imgHolder"></div>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    A Cachaça Artesanal Cana 90, surgiu 2018 com a ideia de ter uma cachaça mineira de boa qualidade e super pura. Produzido em pequena escala temos um produto de primeira linha, feito  especialmente para pessoas exigentes.
                     <button class="desktopButton">Ver produtos</button>
                 </p>
             </div>
