--- a/pages/contato.html
+++ b/pages/contato.html
@@ -16,7 +16,7 @@
         Você pode entrar em contato com
         a gente através deste formulário.
     </p>
-    <form>
+    <form action="https://formspree.io/marovdnx" method="POST">
         <input type="text" name="Nome" id="Nome" placeholder="Nome">
         <input type="email" name="Email" id="Email" placeholder="Email">
         <input type="text" name="Mensagem" id="Mensagem" placeholder="Mensagem">
