--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
     <footer>
         <h1>Cana 90</h1>
         <p><b>Whatsapp:</b> (37) 9 8403-8900</p>
-        <p><b>Email:</b> contato@cana90.com</p>
-        <div class="credits">By Nicolas Ibraim</div>
+        <p><b>Email:</b> contato@cana90.com.br</p>
     </footer>
 
     <script src="js/home.js"></script>
