--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -13,7 +13,7 @@
         <h1>Produtos</h1>
     </nav>
     <p>
-        A Cana 90 hoje produz três linhas de bebidas destiladas, a Aguardente de Cana, Cachaça Artesanal, e  Cachaça envelhecida com cataia. A Aguardente de Cana é uma bebida destilada com graduação alcoólica de densidade alta chegando a 50° GL, a Cachaça Artesanal é uma bebida mais suave, sendo ela bidestilada (destilada duas vezes) com sua graduação alcoólica chega com a densidade de 39° GL. A cachaça Envelhecida com cataia é uma bebida super fina, é um bidestilado de deixamos envelhecer com folhas de cataia, no qual deixa a bebida neutra com sabor de whisky.
+        A Cana 90 hoje produz três linhas de bebidas destiladas, a Aguardente de Cana, Cachaça Artesanal, e  Cachaça envelhecida com cataia. 
     </p>
 
     <div class="cardRow">
@@ -22,21 +22,21 @@
                 <img src="../resources/aguardente.jpeg" alt="">
             </div>
             <h3>Aguardente de Cana</h3>
-            <span>50% GL</span>
+            <span>A Aguardente de Cana é uma bebida destilada com graduação alcoólica de densidade alta chegando a 50° GL</span>
         </div>
         <div class="card cachaca">
             <div class="productImage">
                 <img src="../resources/cachaca.jpeg" alt="">
             </div>
             <h3>Cachaça Artesanal</h3>
-            <span>39% GL</span>
+            <span>A Cachaça Artesanal é uma bebida mais suave, sendo ela bidestilada (destilada duas vezes) com sua graduação alcoólica chega com a densidade de 39° GL.</span>
         </div>
         <div class="card cataia">
             <div class="productImage">
                 <img src="../resources/cataia.jpeg" alt="">
             </div>
             <h3>Cachaça envelhecida com cataia</h3>
-            <span>40% GL</span>
+            <span>A cachaça Envelhecida com cataia é uma bebida super fina, é um bidestilado de deixamos envelhecer com folhas de cataia, no qual deixa a bebida neutra com sabor de whisky.</span>
         </div>
     </div>
 
