Last commit fix

--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -29,14 +29,14 @@
                 <img src="../resources/cachaca.jpeg" alt="">
             </div>
             <h3>Cachaça Artesanal</h3>
-            <span>A Cachaça Artesanal é uma bebida mais suave, sendo ela bidestilada (destilada duas vezes) com sua graduação alcoólica chega com a densidade de 39° GL.</span>
+            <span>A Cachaça Artesanal é uma bebida mais suave, sendo ela bidestilada (destilada duas vezes). Chega com a densidade de 39° GL.</span>
         </div>
         <div class="card cataia">
             <div class="productImage">
                 <img src="../resources/cataia.jpeg" alt="">
             </div>
             <h3>Cachaça envelhecida com cataia</h3>
-            <span>A cachaça Envelhecida com cataia é uma bebida super fina, é um bidestilado de deixamos envelhecer com folhas de cataia, no qual deixa a bebida neutra com sabor de whisky.</span>
+            <span>A cachaça Envelhecida com cataia é uma bebida super fina. É um bidestilado que deixamos envelhecer com folhas de cataia, o que deixa a bebida neutra com sabor de whisky.</span>
         </div>
     </div>
 
